--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,6 +46,8 @@
         </activity>
         <activity android:name=".activity.MoreActivity_" >
         </activity>
+        <activity android:name=".activity.ImageDetailActivity_" >
+        </activity>
     </application>
 
 </manifest>
