--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppBaseTheme" >
         <activity
+            android:name="io.vov.vitamio.activity.InitActivity"
+            android:configChanges="orientation|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/SlideAppTheme"
+            android:windowSoftInputMode="stateAlwaysHidden" >
+        </activity>
+        <activity
             android:name=".activity.WelcomeActivity_"
             android:label="@string/app_name"
             android:theme="@style/SlideAppTheme" >
@@ -47,6 +55,10 @@
         <activity android:name=".activity.MoreActivity_" >
         </activity>
         <activity android:name=".activity.ImageDetailActivity_" >
+        </activity>
+        <activity android:name=".activity.DetailsActivity_" >
+        </activity>
+        <activity android:name=".activity.VideoPlayActivity_" >
         </activity>
     </application>
 
