--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,7 +60,10 @@
         </activity>
         <activity android:name=".activity.VideoPlayActivity_" >
         </activity>
-        <activity android:name=".activity.ChannelActivity_"></activity>
+        <activity android:name=".activity.ChannelActivity_" >
+        </activity>
+        <activity android:name=".activity.PhotoDetailActivity_" >
+        </activity>
     </application>
 
 </manifest>
